@@ -1,12 +1,12 @@
 AUX timezone-data-2008h-makefile.patch 4037 RMD160 b7b9926ccee050dd18f2c33f2654a0b6dc4d35e0 SHA1 281539ae7f6fd804fc1e7ec9533552fa7fd50d88 SHA256 fc496b869ed6b70c60b0fcdea0a176e31c9405c96e6bf73b5edc26339de66c39
 DIST tzcode2010n.tar.gz 192605 RMD160 27a4c430a12f1c58054d64b32bb8cb5091eef3a9 SHA1 403eff4d9875fb97d73a4d624caa127125f6e1f0 SHA256 f2810d87764f142c762b6d5ec3cb9621c981503c041246a1f6f3c24fd5ef131a
-DIST tzcode2011a.tar.gz 193478 RMD160 1cac5d1d12c328ea4848830d296a72ad39e9c9ff SHA1 a7b09c47e04013f28235158d6e04db0e9ac84255 SHA256 65a82a9411f3c085bcd3a4f195709717d3efbca36d9f726afaa3d3155fa34c44
 DIST tzcode2011b.tar.gz 193462 RMD160 dd71b95e62e6acb92a50b10fc22de48e391b5200 SHA1 4ca30bc278e0b8ecda0c58bb6ffa9217e99b18aa SHA256 8031d05102e5c5109521a282aaab0629680bec82db783c716905802313678d67
+DIST tzcode2011c.tar.gz 193553 RMD160 e665e200141823e8c3dd47c21d6c77ab43bd91be SHA1 cb6a85c2c8e990e5fd3d167843bad5611e27c17c SHA256 854be107c23d35dcbdcf42de4975891b138081488e7a2e8bd06adeadb531ac06
 DIST tzdata2010o.tar.gz 191722 RMD160 8c6aaa2f2ff080d4d371b95e46b3a5a4dbc0412c SHA1 bf1541379d987e99ea1941a32ff629f14b1b142c SHA256 cd0f3799688b3b870cd988505e47c2975b1808e73ec0677bc9db4b705b534c07
-DIST tzdata2011a.tar.gz 192593 RMD160 636ddcaa2ededce5e01120e7905bd468aa8cfbcc SHA1 5b43a87750c396ce85eae95914a3b1a1458a94ca SHA256 782c691b4750bdefeb84063128db685a8b8f31dc2efb887ee841ae105bfa747b
 DIST tzdata2011b.tar.gz 193030 RMD160 c63ac8cb6aff97b33a939ddf4ef468897df96990 SHA1 0222d6cb2057239b96f7d16fd2a5434091d5a8c4 SHA256 ff45f5ddc2ec925249626d00d7bc2ffff587e0956a1d8245517a023bf27e4cc9
+DIST tzdata2011c.tar.gz 194151 RMD160 2bb04098de98ae7a21470b7e99e7c1c329ddab91 SHA1 59c9f5a1a0872eb5057f1095f24afd4dfa0a9f47 SHA256 c08fbf767280a6f6dc450306a39d3b5818a0a9792a0991320e00a1bb91e91a3b
 EBUILD timezone-data-2010o.ebuild 3100 RMD160 d368221245989c40bfabed678ef34f0302c2fc28 SHA1 580d89387408fbb84a0e28ac0d6999f6d64ff1e2 SHA256 f5a60333c3a85b672a63be5b816f9d89deb4e7991fe9a54db7102df7a22667f3
-EBUILD timezone-data-2011a.ebuild 3097 RMD160 baced529d21fa65a00910decddf38dc38c702f9c SHA1 c946deed23d77e1bceca5d20c849a2de93451e8c SHA256 4088199b478e8564176486cb4e02c81b6a1794178b68b80a9b12ea55f19bdd34
-EBUILD timezone-data-2011b.ebuild 3106 RMD160 f4fa655e0fc0742abc8175ad6ece6a17703eb764 SHA1 0f0a5ae7f2913828c0056edf719eb2c66ecb9ac2 SHA256 0d3129ecba991e848e2c1c62176d2b47d9b28a1226802dfaa5ee7915aafbbbf1
-MISC ChangeLog 31387 RMD160 258eef900e1d07677b8da14ba09900d3198553e2 SHA1 b16cae3a703109eaaa8e1eaf31d4c9ba7e3165c6 SHA256 d2a5dc6a5d6e6ab11a40667fec709118e8288ee6a7df98451f50bbbdf979a8e5
+EBUILD timezone-data-2011b.ebuild 3106 RMD160 52592cc7712311de57ded1b5103832cdb548caf1 SHA1 422912794a1ab6127b7824571b1adc8995abcbc0 SHA256 92621037dc5b46a00b15198d3142f69366437ef449041738c0edab71323e262c
+EBUILD timezone-data-2011c.ebuild 3106 RMD160 a3ba90d6d78e5a85c4c98bbe194839aa370c3b8b SHA1 72b4efb362617c38944a2ee79e254f6eb047db21 SHA256 eda230d3e67d7938c8cf2ae2867e2025369c674422c5fbf2d2ee574e2f7c207f
+MISC ChangeLog 31718 RMD160 9b196451cff53fb0b7248264c826d44eb3c9edba SHA1 6d1a0bae61910b39ce5bdfdaa7f6c477646e5a51 SHA256 ed95f007ae875d875e4a8d0d5f6b100bf3cd15a94f68b088faf19a587e836517
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
