@@ -1,6 +1,14 @@
 # ChangeLog for sys-libs/timezone-data
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.243 2011/02/10 02:25:18 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.245 2011/03/11 02:43:04 vapier Exp $
+
+  11 Mar 2011; Mike Frysinger <vapier@gentoo.org> timezone-data-2011b.ebuild:
+  Stabilize for everyone #358311 by Arfrever Frehtes Taifersar Arahesis.
+
+*timezone-data-2011c (09 Mar 2011)
+
+  09 Mar 2011; Mike Frysinger <vapier@gentoo.org> +timezone-data-2011c.ebuild:
+  Version bump #358107 by Arfrever Frehtes Taifersar Arahesis.
 
 *timezone-data-2011b (10 Feb 2011)
 
